tests/reference/asr-template_error_01-b4ca796.stderr
syntax error: Token 'requires' (of type 'identifier') is unexpected here
  --> tests/errors/template_error_01.f90:59:9
   |
59 |         requires operations(D, T, S, plus_D, plus_T, D_divided_by_T, D_divided_by_S)
   |         ^^^^^^^^ 
